--- a/ChatterBox/src/ChatterBox/project.json
+++ b/ChatterBox/src/ChatterBox/project.json
@@ -1,25 +1,26 @@
-﻿{
-    "version": "1.0.0-*",
-    "description": "",
-    "authors": [ "" ],
-    "tags": [ "" ],
-    "projectUrl": "",
-    "licenseUrl": "",
+{
+  "userSecretsId": "aspnet5-ChatterBox-20150705010247",
+  "version": "1.0.0-*",
+  "description": "",
+  "authors": [ "" ],
+  "tags": [ "" ],
+  "projectUrl": "",
+  "licenseUrl": "",
 
-    "dependencies": {
-    },
+  "dependencies": {
+  },
 
-    "commands": {
-        "ChatterBox": "ChatterBox"
-    },
+  "commands": {
+    "ChatterBox": "ChatterBox"
+  },
 
-    "frameworks": {
-        "dnx451": { },
-        "dnxcore50": {
-            "dependencies": {
-                "System.Console": "4.0.0-beta-22816",
-                "Microsoft.CSharp": "4.0.0-beta-22816"
-            }
-        }
+  "frameworks": {
+    "dnx451": { },
+    "dnxcore50": {
+      "dependencies": {
+        "System.Console": "4.0.0-beta-22816",
+        "Microsoft.CSharp": "4.0.0-beta-22816"
+      }
     }
+  }
 }
