--- a/ChatterBox/src/ChatterBox/project.json
+++ b/ChatterBox/src/ChatterBox/project.json
@@ -14,13 +14,6 @@
   },
 
   "frameworks": {
-    "dnx451": { },
-
-    "dnxcore50": {
-      "dependencies": {
-        "System.Console": "4.0.0-beta-23019",
-        "Microsoft.CSharp": "4.0.0-beta-23019"
-      }
-    }
+    "dnx451": { }
   }
 }
