--- a/ChatterBox/src/ChatterBox.Parser/project.json
+++ b/ChatterBox/src/ChatterBox.Parser/project.json
@@ -7,14 +7,22 @@
   "licenseUrl": "",
 
   "dependencies": {
-    "System.Collections": "4.0.10-beta-23019",
-    "System.Linq": "4.0.0-beta-23019",
-    "System.Threading": "4.0.10-beta-23019",
-    "System.Runtime": "4.0.10-beta-23019",
-    "Microsoft.CSharp": "4.0.0-beta-23019"
   },
 
   "frameworks": {
-    "dotnet": { }
+    "net45": {
+      "frameworkAssemblies": {
+        "System.Runtime": "4.0.0.0"
+      }
+    },
+    "dnx451": { },
+    "dnxcore50": {
+      "dependencies": {
+        "System.Console": "4.0.0-beta-23019",
+        "Microsoft.CSharp": "4.0.0-beta-23019",
+        "System.IO": "4.0.10-beta-23019",
+        "System.IO.FileSystem": "4.0.0-beta-23019"
+      }
+    }
   }
 }
